--- a/Modulo1_Analise_Exploratorio_Dados_27.05.24_2.ipynb
+++ b/Modulo1_Analise_Exploratorio_Dados_27.05.24_2.ipynb
@@ -13,7 +13,7 @@
         "vx5Mo9Dgh9DQ",
         "LMFZXchwcWKM"
       ],
-      "authorship_tag": "ABX9TyN5skT1Z8ke/5KFHwTwOtg4",
+      "authorship_tag": "ABX9TyO2lF6GCzrU4gvOjG4q4bFp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -10254,12 +10254,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Ordenando meu DF por Ordem Descrescente\n",
+        "#FASE 1- AULA 3 - ANALISE EXPLORATORIA DE DADOS - MANIPULAÇÃO DE DADOS III\n",
         "\n"
       ],
       "metadata": {
         "id": "iAsjr0zPm8_l"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "AJZyh0ZhpfXK"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
