--- a/FASE_2_Bibliotecas_fundamentais_em_ML.ipynb
+++ b/FASE_2_Bibliotecas_fundamentais_em_ML.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM/8rAbflXlJr/+myJ+LHTq",
+      "authorship_tag": "ABX9TyPjMPInS40rajUtGU+0oRrm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3392,7 +3392,9 @@
       "source": [
         "FASE 2 - AULA 4 - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML\n",
         "\n",
-        "Array"
+        "Array\n",
+        "\n",
+        "OPERAÇÕES MATEMATICAS (ADIÇÃO E SUBTRAÇÃO)"
       ],
       "metadata": {
         "id": "1H_wyYIPYHX8"
@@ -3495,9 +3497,98 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#Se eu quiser reverter para não ter que rodar todo o código\n",
+        "arr4_revertido = arr4_transpose.T\n",
+        "print(arr4_revertido)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZS80KaXzdZef",
+        "outputId": "48a830c1-76fb-4c61-a975-1d0e14302b5c"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 1  2  5  6  9 10]\n",
+            " [ 3  4  7  8 11 12]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Operações Matemáticas add (adição)\n",
+        "arr_a = np.array([1,7,27])\n",
+        "arr_b = np.array([5,8,30])\n",
+        "arr_a_b = np.add(arr_a, arr_b)\n",
+        "print(arr_a_b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vigVPPRQr2Wg",
+        "outputId": "1d43679e-b2f4-4484-da3c-34a0cb4986f7"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 6 15 57]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Operações Matemáticas subtract (subtração)\n",
+        "arr_sub_a_b = np.subtract(arr_a, arr_b)\n",
+        "print(arr_sub_a_b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G3qsL8Rxs0Jv",
+        "outputId": "1f95a62a-a86f-41d6-96a3-5937b106a702"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[-4 -1 -3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "FASE 2 - AULA 5 - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML\n",
+        "\n",
+        "OPERAÇÕES MATEMATICAS"
+      ],
+      "metadata": {
+        "id": "_HpDaXCItfy7"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ZS80KaXzdZef"
+        "id": "EqZP2BZIttbc"
       },
       "execution_count": null,
       "outputs": []
