--- a/FASE_2_Bibliotecas_fundamentais_em_ML.ipynb
+++ b/FASE_2_Bibliotecas_fundamentais_em_ML.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPjMPInS40rajUtGU+0oRrm",
+      "authorship_tag": "ABX9TyNATGwobNI9Ylnhos6L7XQR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3394,7 +3394,7 @@
         "\n",
         "Array\n",
         "\n",
-        "OPERAÇÕES MATEMATICAS (ADIÇÃO E SUBTRAÇÃO)"
+        "OPERAÇÕES MATEMATICAS"
       ],
       "metadata": {
         "id": "1H_wyYIPYHX8"
@@ -3574,11 +3574,111 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#Operações Matemáticas multiply (Multiplicação)\n",
+        "arr_multiplica_a_b = np.multiply(arr_a, arr_b)\n",
+        "print(arr_multiplica_a_b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kYDYs0m2uZTD",
+        "outputId": "d831d803-74bd-41e7-c30d-dd963fa1f55f"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[  5  56 810]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Operações Matemáticas divide (divisão)\n",
+        "arr_divide_a_b = np.divide(arr_a, arr_b)\n",
+        "print(arr_divide_a_b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KLagfQm8ur09",
+        "outputId": "4cc0c2a7-3f71-40a8-89cb-84a31a14d920"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.2   0.875 0.9  ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Operações Matemáticas mean (média)\n",
+        "arr_media_a_b = np.mean(arr_a)\n",
+        "print(arr_media_a_b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "viVC2K6Wu4vV",
+        "outputId": "5864645a-969f-474b-f9eb-5ebb8c8f423b"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "11.666666666666666\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Operações Matemáticas percentil (Percentual, neste caso por 78%)\n",
+        "arr_percentual_a_b = np.percentile(arr_a,78)\n",
+        "print(arr_percentual_a_b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Rew656v6vLu0",
+        "outputId": "886b842c-000c-43cc-9a54-c5a3a8991df4"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "18.200000000000003\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "FASE 2 - AULA 5 - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML\n",
         "\n",
-        "OPERAÇÕES MATEMATICAS"
+        "MATPLOTLIB (GRAFICOS)"
       ],
       "metadata": {
         "id": "_HpDaXCItfy7"
