--- a/FASE_2_Bibliotecas_fundamentais_em_ML.ipynb
+++ b/FASE_2_Bibliotecas_fundamentais_em_ML.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNATGwobNI9Ylnhos6L7XQR",
+      "authorship_tag": "ABX9TyP0uEVaVEWen0tKm/NNiVEA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3177,7 +3177,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "FASE 2 - AULA 3 - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML\n",
+        "**FASE 2 - AULA 3 - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML**\n",
         "\n",
         "BIBLIOTECA NUMPY"
       ],
@@ -3390,7 +3390,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "FASE 2 - AULA 4 - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML\n",
+        "**FASE 2 - AULA 4 - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML**\n",
         "\n",
         "Array\n",
         "\n",
@@ -3676,7 +3676,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "FASE 2 - AULA 5 - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML\n",
+        "**FASE 2 - AULA 5 - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML**\n",
         "\n",
         "MATPLOTLIB (GRAFICOS)"
       ],
@@ -3686,9 +3686,55 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#Importar a Matplotlib\n",
+        "!pip install matplotlib"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EqZP2BZIttbc",
+        "outputId": "f8b666bd-46f2-4b38-aaee-d062739d537d"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.10/dist-packages (3.7.1)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (1.2.1)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (0.12.1)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (4.53.0)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (1.4.5)\n",
+            "Requirement already satisfied: numpy>=1.20 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (1.25.2)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (24.1)\n",
+            "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (9.4.0)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (3.1.2)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (2.8.2)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Carregando a Matplotlib\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "metadata": {
+        "id": "L0Q8g6rrwHaC"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "EqZP2BZIttbc"
+        "id": "sHSgxMT8wL8y"
       },
       "execution_count": null,
       "outputs": []
