--- a/FASE_2_Bibliotecas_fundamentais_em_ML.ipynb
+++ b/FASE_2_Bibliotecas_fundamentais_em_ML.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNV6kH825SSLXiOD0C5SvG6",
+      "authorship_tag": "ABX9TyPCUGz17xMmrCQyou0u/hPF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "FASE 2 - AULA 1 e 2 - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML"
+        "**FASE 2 - AULA 1 - EPISÓDIO 1 e 2 - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML**"
       ],
       "metadata": {
         "id": "faKrcJwzjml6"
@@ -3177,7 +3177,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**FASE 2 - AULA 3 - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML**\n",
+        "**FASE 2 - AULA 1 - EPISÓDIO 3 - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML**\n",
         "\n",
         "BIBLIOTECA NUMPY"
       ],
@@ -3390,7 +3390,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**FASE 2 - AULA 4 - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML**\n",
+        "**FASE 2 - AULA 1 - EPISÓDIO 3 - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML**\n",
         "\n",
         "Array\n",
         "\n",
@@ -3676,7 +3676,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**FASE 2 - AULA 5 - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML**\n",
+        "**FASE 2 - AULA 1 - EPISÓDIO 4  - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML**\n",
         "\n",
         "MATPLOTLIB (GRAFICOS)"
       ],
@@ -4280,7 +4280,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**FASE 2 - AULA 6 - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML**\n",
+        "**FASE 2 - AULA 1 - EPISÓDIO 6  - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML**\n",
         "\n",
         "MATPLOTLIB (GRAFICOS DE DISPERSÃO) e GRAFICO DE BARRAS (volume de dados de uma determinada categoria)"
       ],
@@ -5500,7 +5500,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "FASE 2 - AULA 7 - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML\n",
+        "**FASE 2 - AULA 1 - EPISÓDIO 7  - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML**\n",
         "\n",
         "MATPLOTLIB (GRAFICOS DE PIZZA)"
       ],
@@ -5567,7 +5567,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**FASE 2 - AULA 8 - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML**\n",
+        "**FASE 2 - AULA 1 - EPISÓDIO 8  - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML**\n",
         "\n",
         "Para modelos de machine Learning a principal é:\n",
         "\n",
@@ -6081,7 +6081,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**FASE 2 - AULA 9 - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML**\n",
+        "**FASE 2 - AULA 1 - EPISÓDIO 9  - BIBLIOTECAS FUNDAMENTAIS E PRIMEIROS PASSOS EM ML**\n",
         "\n",
         "Para modelos de machine Learning a principal é:\n",
         "\n",
