--- a/FASE_2_AULA 2 - Analise Exploratória de Dados EDA.ipynb
+++ b/FASE_2_AULA 2 - Analise Exploratória de Dados EDA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMA4VchogchPz1vfUSJqdGr",
+      "authorship_tag": "ABX9TyOR75IkDJIN/cfQrgBPZE0X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +65,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 293
+          "height": 206
         },
         "id": "iu_GH-Ak5DGM",
         "outputId": "0367a591-f31e-4990-f2d9-88de7561a886"
@@ -1218,7 +1218,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 446
+          "height": 238
         },
         "id": "Shg23AgQCEma",
         "outputId": "0cb7ea41-ab9b-4d37-f92c-d1dee3cd8e66"
@@ -1651,7 +1651,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 318
+          "height": 300
         },
         "id": "4KFSYiiXCZHH",
         "outputId": "e8ef6b54-1f01-4688-db1f-58c90e667a72"
@@ -2093,7 +2093,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 449
+          "height": 206
         },
         "id": "W60-KjoHDbNG",
         "outputId": "ba13f91b-ded6-4431-d623-0f7feb4bf225"
@@ -2492,7 +2492,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 338
+          "height": 300
         },
         "id": "K6geS4OeFQ2-",
         "outputId": "7a5bcfa3-45e3-4594-d466-9cd2c85822dd"
@@ -3454,7 +3454,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 449
+          "height": 206
         },
         "id": "8SB8f47g53p_",
         "outputId": "9e01a44b-9bd1-4c7a-d0fe-fa645fe0cedb"
@@ -3870,7 +3870,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 782
+          "height": 363
         },
         "id": "DNrK4g3W9Nnw",
         "outputId": "bbc818b4-25fb-43cb-eb52-1fad25f0d164"
@@ -4766,11 +4766,11 @@
         "  print(\"Nã há diferença estatisticamente significante\")"
       ],
       "metadata": {
-        "id": "I2O8Xq-KNJNX",
-        "outputId": "e1fbc058-13a2-43a0-fa2b-088093c2579f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "I2O8Xq-KNJNX",
+        "outputId": "e1fbc058-13a2-43a0-fa2b-088093c2579f"
       },
       "execution_count": 47,
       "outputs": [
@@ -4786,10 +4786,32 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "**FASE 2 - AULA 2 -EPISÓDIO 11 Análise Exploratória de Dados (EDA)**\n",
+        "\n",
+        "ANALISE DE CORRELAÇÃO"
+      ],
       "metadata": {
-        "id": "YLC1tGaePUHR"
+        "id": "C35DGQyqQQAx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#vAMOS ANALISAR OS DADOS DE VALENCIA\\9\\Sentimento das Muscas)\n",
+        "#reset_index\n",
+        "media_por_album = df.groupby(\"album\")[\"valence\"].mean().reset_index()\n",
+        "\n",
+        "#Coluna para armazenar essa média\n",
+        "media_por_album = media_por_album.rename(columns={\"valence\":\"media_valence\"})\n",
+        "\n",
+        "#criando uma coluna sntimento que vai analisar a \"media_valence\" > 0.6 será positiva e abaixo será negativa\n",
+        "media_por_album[\"sentimento\"] = [\"positivo\" if v >0.6 else \"negativo\" for v in media_por_album[\"media_valence\"]]\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Pi_hHy39QYlp"
       },
       "execution_count": null,
       "outputs": []
